--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Snoopy</h1>
-    <img src="./img/snoopy.jpeg">
+    <img src="img/img.jpeg" alt="snoopy">
     <p>Snoopy is a character from the comic strip 
         <a href="https://en.wikipedia.org/wiki/Snoopy">Peanuts</a>, by Charles Schulz. Snoopy is a dog of the Beagle breed and belongs to the main character of the comic strip, Charlie Brown. Snoopy is known for being a sassy and humorous friend within the Peanuts bunch.</p>
 
